# satscore-cubo-tech

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml  wrangler.toml
front-end-svelte/: .gitignore  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
front-end-svelte/src/: app.css  app.d.ts  app.html  hooks.server.ts
front-end-svelte/static/: manifest.json
frontend/lib/: app.dart  main.dart
sdk/: README.md  pyproject.toml
sdk/magma_sdk/: __init__.py  __main__.py  _transport.py  async_client.py  async_resources.py  cli.py  client.py  models.py
sdk/magma_sdk/resources/: __init__.py  liquid.py
src/: .env.production.example  Dockerfile  deploy-hetzner.sh  docker-compose.prod.yml  main.py
src/app/: config.py  database.py  logging_config.py  validation.py
src/app/admin/: __init__.py  users.py  (+3 more)
src/tests/: __init__.py  conftest.py  test_auth.py  test_btcprotocol.py  test_database.py  test_finance.py  test_gamification.py  test_integration.py  test_nostr.py  test_pension.py  test_remittance.py  test_savings.py  test_scoring.py  test_services.py  test_validation.py
strategy/: README.md  impact-analysis.md  operational-model.md
tests/: conftest.py  test_achievements.py  test_bech32.py  test_fees.py  test_http_cache.py  test_liquid_client.py  test_liquid_routes.py  test_pension.py  test_price_aggregator.py  test_projector.py  test_remittance_optimizer.py  test_streak.py  test_validation.py  test_wise_client.py
tests/sdk/: test_async_client.py  test_cli.py  test_liquid_resource.py  test_retry_after.py
(+218 files in other folders)
